# tess-inventarios

./: .env.example  .gitignore  Guia-Supabase-Render.html  Opciones-Hosting-TESS.html  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: .env.example  .taurignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json  tsconfig.json
src-tauri/icons/: icon.icns
src-tauri/prisma/: schema.prisma  seed.ts
src-tauri/src/: lib.rs  main.ts  server.ts
src-tauri/src/api/commands/: category.commands.ts  customer.commands.ts  product.commands.ts  purchase.commands.ts  sale.commands.ts  supplier.commands.ts  user.commands.ts
src-tauri/src/application/dtos/: category.dto.ts  customer.dto.ts  product.dto.ts  purchase.dto.ts  sale.dto.ts  supplier.dto.ts  user.dto.ts
src-tauri/src/application/mappers/: category.mapper.ts  customer.mapper.ts  product.mapper.ts  purchase.mapper.ts  sale.mapper.ts  supplier.mapper.ts  user.mapper.ts
src-tauri/src/application/services/: category.service.ts  customer.service.ts  product.service.ts  purchase.service.ts  sale.service.ts  supplier.service.ts  user.service.ts
src-tauri/src/domain/entities/: brand.entity.ts  category.entity.ts  customer.entity.ts  motorcycle-compatibility.entity.ts  permission.entity.ts  product-image.entity.ts  product.entity.ts  purchase-item.entity.ts  purchase.entity.ts  role.entity.ts  sale-item.entity.ts  sale.entity.ts  supplier.entity.ts  user.entity.ts
src-tauri/src/domain/repositories/: brand.repository.interface.ts  category.repository.interface.ts  (+8 more)
(+77 files in other folders)
